# EmpathyEngine

./: .gitignore  README.md  client.py  main.py  pyproject.toml  streamlit_integrated_app.py  test_flask_integration.py
app/config/: config_loader.py
app/emotion/: detector.py  labels.py
app/pipeline/: empathy_pipeline.py
app/tts/: engine.py  ssml_generator.py  voice_mapper.py
configs/: config.yaml
flask_app/: __init__.py  app.py
scripts/: list_voices.py
streamlit_app/: app.py
